# jolt_test

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  main.cpp
include/GLFW/: glfw3.lib
include/glad/: glad.c  glad.h
penis/: CMakeLists.txt  ImguiManager.hpp  PRenderer.cpp  PRenderer.hpp  animation.cpp  animation.hpp  animation_graph.cpp  animation_graph.hpp  arena.cpp  arena.hpp  build.bat  camera.cpp  camera.hpp  dds_loader.cpp  entity.hpp  game_mode.cpp  game_mode.hpp  globals.hpp  imgui_themes.hpp  input.hpp  job_system.cpp  job_system.h  main.cpp  opengl.h  packed_freelist.h  penis_jolt.cpp  penis_jolt.hpp  penis_mesh.hpp  preamble.glsl  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.h  shaderset.cpp  shaderset.h  skybox.cpp  skybox.hpp
penis_common/: common.hpp
penis_jolt/: debug_renderer.cpp  debug_renderer.hpp
resources/chips_2/: chips_2.gltf  chips_2.pmeta  face_marcus.dds  marine_arms_BaseColor.dds  marine_helmet_hud.dds  marine_helmet_ncl1_1.dds  marine_legs_BaseColor.dds  marine_torso_BaseColor.dds
resources/chips_2/animations/: dash_b.panim  dash_f.panim  dash_l.panim  dash_r.panim  dash_r_combat.panim  double_jump.panim  double_jump_f.panim  fall_loop.panim  idle.panim  jump.panim  kick.panim  land.panim  roll.panim  run_b.panim  run_b_l.panim  run_b_r.panim  run_f.panim  run_l.panim  run_r.panim  slide_loop.panim  special_attack.panim  sweep.panim
resources/delta/: cliff_walls.dds  color_white.dds  delta.gltf  delta.pmeta  dt_door_tower_color.dds  floor_x_tile.dds  foliage_cliffs.dds  granite_mossy.dds  gray_50_percent.dds  ground_grotto.dds  ground_temple.dds  ground_towers.dds  island_terrain.dds  metal_tech_strips.dds  pebble.dds  stone_floors.dds  stone_walls.dds  swordfern.dds  tower_metal_dirty.dds  tower_metal_droppings.dds  tower_metal_plain.dds  tower_metal_trim.dds  tower_metal_trim_c.dds  tower_metal_trim_e.dds  tower_metal_trim_f.dds  tower_metal_trim_g.dds  tree_clifftop.dds  vines.dds  weeds_brown.dds
resources/follige/: dt_vines_dif.dds  fern.gltf  fern.pmeta
resources/level/: level_big.gltf  movement_level.gltf  untitled.gltf
resources/pilot/: pilot.gltf  pilot.pmeta  pilot_body.dds  teeth_pilot.dds
resources/skeletons/: chips_rig.pskeleton
shaders/: blit.vert  blit_test.frag  blit_texture.frag  debug_depth_map.frag  debug_line.frag  debug_line.vert  post_process_clear.frag  post_process_crt.frag  post_process_invert_color.frag  scene.frag  scene.vert  shadow_mapping_depth.frag  shadow_mapping_depth.vert  skin.comp  skinning.frag  skinning.vert  skybox.frag  skybox.vert  unlit.fs  unlit.vs
